--- a/02-sampling.Rmd
+++ b/02-sampling.Rmd
@@ -50,7 +50,7 @@ Because each applicant selected themselves into this sample, it is clearly not r
 
 * **Admit**: Either "Admitted" or "Rejected", depending on whether the applicant was admitted or rejected.
 * **Gender**: Either "Male" or "Female".
-* **Department**: A letter between "A" and "F"; the department names were obscured for privacy.
+* **Department**: A letter between "A" and "F" that identifies the academic department to which the applicant applied.  The actual department names were obscured for privacy.
 
 ::: {.exercise}
 What type (nominal categorical, ordinal categorical, numerical) are each of the variables in this dataset?
